--- a/site/lib/common.css
+++ b/site/lib/common.css
@@ -15,6 +15,14 @@ body {
 	padding: 0;
 }
 
+h1 {
+	margin: 0;
+	text-align: center;
+	padding: .5em 0;
+	background-color: black;
+	color: #dddddd;
+}
+
 header,
 footer {
 	background-color: #dddddd;
@@ -24,14 +32,6 @@ header {
 	position: sticky;
 	top: 0;
 	z-index: 1000;
-}
-
-h1 {
-	margin: 0;
-	text-align: center;
-	padding: .5em 0;
-	background-color: black;
-	color: #dddddd;
 }
 
 nav {
@@ -52,20 +52,36 @@ nav > a.current {
 }
 
 
-.licence {
+footer {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+#license {
+	flex: 1;
+	min-width: 10em;
 	display: block;
-	text-align: center;
 	color: #033300;
 	text-decoration: none;
 	padding: .5em 1em;
 	font-size: 80%;
 	font-style: italic;
+	text-align: center;
 }
 
-.licence > img {
+#license > img {
+	flex: 1;
 	height: 1.5em;
 	vertical-align: middle;
 	margin: 0 .3em;
+}
+
+#legal {
+	flex: 1;
+	min-width: 10em;
+	text-align: center;
+	padding: .5em 1em;
+	font-size: 80%;
 }
 
 main {
@@ -129,4 +145,27 @@ code {
 
 a {
 	color: #375a3c;
+}
+
+@media (max-width: 40em) {
+	:root {
+		font-size: 90%;
+	}
+
+	nav {
+		text-align: center;
+	}
+
+	nav > a {
+		padding: .3em .5em;
+	}
+
+	html {
+		background-color: #fBfBfB;
+		padding: 0;
+	}
+
+	h2 {
+		font-size: 1.3em;
+	}
 }
