--- a/site/lib/common.css
+++ b/site/lib/common.css
@@ -105,7 +105,6 @@ h3 {
 
 .border {
 	border: 1px solid var(--border-color);
-	display: block;
 }
 
 .center {
@@ -137,6 +136,15 @@ h3 {
 
 .scroll {
 	overflow: auto;
+}
+
+.hbox {
+	display: flex;
+}
+
+.vbox {
+	display: flex;
+	flex-direction: column;
 }
 
 code {
